Add amazon search automation flow